--- a/testbeds/princeton/roles/kubernetes/tasks/overlay/add_gre_tunnel.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/overlay/add_gre_tunnel.yml
@@ -5,5 +5,5 @@
     bridge: br0
     port: gre_{{ remote_node.pve_id }}_{{ remote_node.vm_id }}
     state: present
-    set: interface gre_{{ remote_node.pve_id }}_{{ remote_node.vm_id }} type=gre options:remote_ip={{ nodes[inventory_hostname]['address_prefix'] }}{{ remote_node.vm_id }}
+    set: interface gre_{{ remote_node.pve_id }}_{{ remote_node.vm_id }} type=gre options:remote_ip={{ k8s_node_address_prefix }}{{ remote_node.pve_id }}.{{ remote_node.vm_id }}
   become: true
