--- a/testbeds/princeton/roles/proxmox/defaults/main.yml
+++ b/testbeds/princeton/roles/proxmox/defaults/main.yml
@@ -17,10 +17,10 @@ proxmox_base_vm_nbd_device: nbd0
 proxmox_vm_user: mshahbaz
 proxmox_vm_hostname_prefix: k8s-node-
 proxmox_vm_network_interface: eth0
+proxmox_vm_network_address_prefix: 192.168.
 proxmox_vm_network_netmask: 255.255.255.0
-proxmox_vm_network_network: "{{ proxmox_vm_network_address_prefix }}0"
-proxmox_vm_network_broadcast: "{{ proxmox_vm_network_address_prefix }}255"
-proxmox_vm_network_gateway: "{{ proxmox_vm_network_address_prefix }}1"
+proxmox_vm_network_network_postfix: 0
+proxmox_vm_network_broadcast_postfix: 255
+proxmox_vm_network_gateway_postfix: 1
 proxmox_vm_dns_nameservers: 128.112.136.10
 proxmox_vm_dns_search: cs.princeton.edu
-proxmox_vm_overlay_subnet_prefix: "10.10."
