--- a/testbeds/princeton/roles/proxmox/tasks/vms/create.yml
+++ b/testbeds/princeton/roles/proxmox/tasks/vms/create.yml
@@ -50,7 +50,7 @@
   replace:
     path: /mnt/vm{{ proxmox_vm_id }}/etc/hosts
     regexp: "{{ proxmox_base_vm_address }}"
-    replace: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_id }}"
+    replace: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_id }}"
 
 - name: update hostname in /etc/hosts
   replace:
@@ -82,7 +82,7 @@
 
 - name: wait for ssh to come up
   wait_for:
-    host: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_id }}"
+    host: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_id }}"
     port: 22
     delay: 1
     state: started
