--- a/testbeds/princeton/roles/kubernetes/defaults/main.yml
+++ b/testbeds/princeton/roles/kubernetes/defaults/main.yml
@@ -3,13 +3,13 @@
 etcd_version: 2.3.2
 k8s_version: 1.2.3
 
-k8s_overlay_subnet_first_octect_base: 170
-k8s_overlay_subnet_mask: 16
-k8s_node_address_prefix: 10.10.
+k8s_overlay_subnet_address_prefix: 10.
+k8s_overlay_subnet_mask: 24
+k8s_node_address_prefix: 192.168.
 k8s_etcd_port: 4001
 k8s_etcd_data_dir: /var/etcd/data
 k8s_api_server_port: 8080
-k8s_api_server_service_cluster_ip_range: 10.254.0.0/16
+k8s_api_server_service_cluster_ip_range: 172.16.254.0/24
 k8s_kubectl_url: "http://storage.googleapis.com/kubernetes-release/release/v{{ k8s_version }}/bin/linux/amd64/kubectl"
 k8s_docker_defautl_config: "/etc/default/docker"
 
