adding support for vxlan tunnel for VM overlay network

--- a/testbeds/princeton/roles/proxmox/defaults/main.yml
+++ b/testbeds/princeton/roles/proxmox/defaults/main.yml
@@ -5,7 +5,11 @@ proxmox_name_prefix: pve
 proxmox_api_user: root@pam
 proxmox_api_password: PrincetonP4OVS
 
-proxmox_overlay_subnet_mtu_size: 1462
+
+proxmox_overlay_tunnel_type: vxlan
+proxmox_overlay_tunnel_header_size: 1450
+
+proxmox_overlay_subnet_mtu_size: "{{ proxmox_overlay_tunnel_header_size }}"
 
 proxmox_base_vm_vmid: 101
 proxmox_base_vm_hostname: "ubuntu-14-{{ proxmox_base_vm_vmid }}"
