commits after testing with VXLAN instead of GRE
GRE for some reason fails at the container level

--- a/testbeds/princeton/roles/kubernetes/tasks/overlay/create.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/overlay/create.yml
@@ -37,7 +37,7 @@
   shell: brctl addif docker0 br0
   become: true
 
-- name: create gre tunnels for each endpoint using br0
+- name: create {{ k8s_overlay_tunnel_type }} tunnels for each endpoint using br0
   include: roles/kubernetes/tasks/overlay/add_tunnel.yml remote_node="{{ item }}"
   with_items: "{{ nodes[inventory_hostname]['remote_nodes'] }}"
   become: true
