--- a/testbeds/princeton/roles/kubernetes/defaults/main.yml
+++ b/testbeds/princeton/roles/kubernetes/defaults/main.yml
@@ -3,13 +3,21 @@
 etcd_version: 2.3.2
 k8s_version: 1.2.3
 
+k8s_overlay_tunnel_type: vxlan
+k8s_overlay_tunnel_size: 1400 # as the packet is further tunneled at the VM layer
+
 k8s_overlay_subnet_address_prefix: 10.
 k8s_overlay_subnet_mask: 24
-k8s_overlay_subnet_mtu_size: 1424
+k8s_overlay_subnet_mtu_size: "{{ k8s_overlay_tunnel_size }}"
+
 k8s_node_address_prefix: 192.168.
+
 k8s_etcd_port: 4001
 k8s_etcd_data_dir: /var/etcd/data
+
 k8s_api_server_port: 8080
 k8s_api_server_service_cluster_ip_range: 172.16.254.0/24
+
 k8s_kubectl_url: "http://storage.googleapis.com/kubernetes-release/release/v{{ k8s_version }}/bin/linux/amd64/kubectl"
+
 k8s_docker_defautl_config: "/etc/default/docker"
