commits after vxlan testing

--- a/testbeds/princeton/roles/proxmox/defaults/main.yml
+++ b/testbeds/princeton/roles/proxmox/defaults/main.yml
@@ -7,7 +7,7 @@ proxmox_api_password: PrincetonP4OVS
 
 
 proxmox_overlay_tunnel_type: vxlan
-proxmox_overlay_tunnel_size: 1450
+proxmox_overlay_tunnel_size: 1450 # 1500 - 50 (VXLAN header size)
 
 proxmox_overlay_subnet_mtu_size: "{{ proxmox_overlay_tunnel_size }}"
 
