--- a/testbeds/princeton/roles/kubernetes/defaults/main.yml
+++ b/testbeds/princeton/roles/kubernetes/defaults/main.yml
@@ -4,7 +4,7 @@ etcd_version: 2.3.2
 k8s_version: 1.2.3
 
 k8s_overlay_tunnel_type: vxlan
-k8s_overlay_tunnel_size: 1400 # as the packet is further tunneled at the VM layer
+k8s_overlay_tunnel_size: 1400 # 1500 - 50 -50 (VXLAN header size), as the packet is further tunneled at the VM layer
 
 k8s_overlay_subnet_address_prefix: 10.
 k8s_overlay_subnet_mask: 24
