--- a/testbeds/vmware/proxmox.yml
+++ b/testbeds/vmware/proxmox.yml
@@ -1,7 +1,12 @@
 ---
 
 - name: provision proxmox VMs
-  hosts: prme-nsx-perf-001, prme-nsx-perf-002 # Update this for other proxmox nodes
+  hosts:  prme-nsx-perf-001
+         ,prme-nsx-perf-002
+#         ,prme-nsx-perf-003
+#         ,prme-nsx-perf-007
+#         ,prme-nsx-perf-008
+#         ,prme-nsx-perf-009
   gather_facts: true
 
   vars_files:
