--- a/testbeds/vmware/roles/kubernetes/tasks/cluster/create.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/cluster/create.yml
@@ -7,7 +7,7 @@
     image: quay.io/coreos/etcd:v{{ etcd_version }}
     command:
       - "--listen-client-urls=http://0.0.0.0:{{ k8s_etcd_port }}"
-      - "--advertise-client-urls=http://127.0.0.1:{{ k8s_etcd_port }}"
+      - "--advertise-client-urls=http://0.0.0.0:{{ k8s_etcd_port }}"
       - "--data-dir={{ k8s_etcd_data_dir }}"
   when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
@@ -22,7 +22,7 @@
       - "--insecure-bind-address=0.0.0.0"
       - "--insecure-port={{ k8s_api_server_port }}"
       - "--service-cluster-ip-range={{ k8s_api_server_service_cluster_ip_range }}"
-      - "--etcd-servers=http://127.0.0.1:{{ k8s_etcd_port }}"
+      - "--etcd-servers=http://{{ k8s_node_address_prefix }}{{ prme_id }}.{{ vm_id }}:{{ k8s_etcd_port }}"
       - "--allow-privileged=true"
       - "--v=2"
       - "--logtostderr=true"
@@ -36,7 +36,7 @@
     image: gcr.io/google_containers/hyperkube-amd64:v{{ k8s_version }}
     command:
       - "/hyperkube controller-manager"
-      - "--master=http://127.0.0.1:{{ k8s_api_server_port }}"
+      - "--master=http://{{ k8s_node_address_prefix }}{{ prme_id }}.{{ vm_id }}:{{ k8s_api_server_port }}"
       - "--v=2"
       - "--logtostderr=true"
   when: '"master" in nodes[inventory_hostname]["type"]'
@@ -49,7 +49,7 @@
     image: gcr.io/google_containers/hyperkube-amd64:v{{ k8s_version }}
     command:
       - "/hyperkube scheduler"
-      - "--master=http://127.0.0.1:{{ k8s_api_server_port }}"
+      - "--master=http://{{ k8s_node_address_prefix }}{{ prme_id }}.{{ vm_id }}:{{ k8s_api_server_port }}"
       - "--v=2"
       - "--logtostderr=true"
   when: '"master" in nodes[inventory_hostname]["type"]'
