--- a/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
@@ -32,14 +32,14 @@
   docker_container:
     name: kubelet
     state: absent
-#  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: start proxy
   docker_container:
     name: proxy
     state: absent
-#  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: remove docker compose
@@ -50,5 +50,5 @@
 
 - name: flush iptable rules
   command: iptables -t nat -F
-#  when: '"minion" in nodes[inventory_hostname]["type"]'
+  when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
