--- a/testbeds/vmware/roles/kubernetes/tasks/cluster/create.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/cluster/create.yml
@@ -6,7 +6,7 @@
     network_mode: host
     pid_mode: host
     name: etcd
-    image: gcr.io/google_containers/etcd:{{ etcd_version }}
+    image: gcr.io/google_containers/etcd-amd64:{{ etcd_version }}
     command:
       - "/usr/local/bin/etcd"
       - "--listen-client-urls=http://0.0.0.0:{{ k8s_etcd_port }}"
@@ -81,7 +81,7 @@
       - "--enable-server"
       - "--hostname-override={{ inventory_hostname }}"
       - "--address=0.0.0.0"
-      - "--api-servers=http://{{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['pve_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }}"
+      - "--api-servers=http://{{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['prme_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }}"
       - "--v=2"
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
@@ -95,7 +95,7 @@
     image: gcr.io/google_containers/hyperkube-amd64:v{{ k8s_version }}
     command:
       - "/hyperkube proxy"
-      - "--master=http://{{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['pve_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }}"
+      - "--master=http://{{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['prme_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }}"
       - "--v=2"
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
