--- a/testbeds/princeton/proxmox.yml
+++ b/testbeds/princeton/proxmox.yml
@@ -1,8 +1,9 @@
 ---
 
 - name: provision proxmox VMs
-  hosts:  mshahbaz-poweredge-2-pve
-         ,mshahbaz-poweredge-3-pve # Update this for other proxmox nodes
+  hosts:  #mshahbaz-poweredge-1-pve,
+          mshahbaz-poweredge-2-pve
+         ,mshahbaz-poweredge-3-pve
   gather_facts: true
 
   vars_files:
