--- a/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/cluster/destroy.yml
@@ -28,14 +28,14 @@
   when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
 
-- name: start kubelet
+- name: remove kubelet
   docker_container:
     name: kubelet
     state: absent
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
-- name: start proxy
+- name: remove proxy
   docker_container:
     name: proxy
     state: absent
