--- a/testbeds/princeton/roles/kubernetes/tasks/apps/create.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/apps/create.yml
@@ -1,20 +1,23 @@
 ---
 
-- name: upload app configs
+- name: upload apps' configs
   copy:
-    src: "{{ apps.base_dir }}/apps/{{ item }}.yml"
+    src: "{{ k8s_apps_base_dir }}/apps/{{ item }}.yml"
     dest: /tmp/app.{{ item }}.yml
-  with_items: "{{ apps.collection }}"
+  with_items: "{{ apps.names }}"
+  when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: create apps
   shell: kubectl apply -f /tmp/app.{{ item }}.yml
-  with_items: "{{ apps.collection }}"
+  with_items: "{{ apps.names }}"
+  when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
 
-- name: remove app configs
-  file:
-    path: /tmp/app.{{ item }}.yml
-    state: absent
-  with_items: "{{ apps.collection }}"
-  become: true
+#- name: remove apps' configs
+#  file:
+#    path: /tmp/app.{{ item }}.yml
+#    state: absent
+#  with_items: "{{ apps.names }}"
+#  when: '"master" in nodes[inventory_hostname]["type"]'
+#  become: true
