--- a/testbeds/princeton/roles/kubernetes/defaults/main.yml
+++ b/testbeds/princeton/roles/kubernetes/defaults/main.yml
@@ -21,3 +21,6 @@ k8s_api_server_service_cluster_ip_range: 172.16.254.1/24
 k8s_kubectl_url: "http://storage.googleapis.com/kubernetes-release/release/v{{ k8s_version }}/bin/linux/amd64/kubectl"
 
 k8s_docker_defautl_config: "/etc/default/docker"
+
+k8s_apps_base_dir: files
+k8s_apps_scheduler: rr
