--- a/testbeds/vmware/roles/kubernetes/defaults/main.yml
+++ b/testbeds/vmware/roles/kubernetes/defaults/main.yml
@@ -22,5 +22,7 @@ k8s_kubectl_url: "http://storage.googleapis.com/kubernetes-release/release/v{{ k
 
 k8s_docker_defautl_config: "/etc/default/docker"
 
+k8s_node_dns_nameservers: 10.20.20.1
+
 k8s_apps_base_dir: files
 k8s_apps_scheduler: rr
